# Avoidome_test_v2

./: .gitignore  PAPYRUS_STANDARD_FEATURE.md  PROJECT_EXPLANATION.md  README.md  chemprop_environment.yml  config.yaml  environment.yml  esmc_environment.yml  pyproject.toml  requirements.txt  single_esmc_embeddings.py  unit_test_ci_guide.md
01_input_preparation/: avoidome_proteins_combined.fasta  avoidome_sequences.csv  input_preparation_summary.txt
01_input_preparation/fasta_files/: O75469_PXR.fasta  O94956_OATP2B1.fasta  O95154_Aldehyde reductase.fasta  P00352_ALDH1A1.fasta  P02763_Alpha1-acid glycoprotein.fasta  P05177_CYP1A2.fasta  P07327_Alcohol dehydrogenase 1A.fasta  P07550_Adrenergic receptor B2.fasta  P08172_Muscarinic receptor M2.fasta  P08263_GSTA1.fasta  P08588_Adrenergic receptor B1.fasta  (+42 more)
02_similarity_search/: similarity_search_summary.csv
04_bioactivity_threshold_optimization/: class_imbalance_summary_only_target.csv  class_imbalance_summary_optimized.csv  class_imbalance_summary_with_similar.csv
05_model_training/: protein_list_all_unique.csv
05_model_training_0/: protein_list_all_unique.csv  protein_summary_table.csv  workflow_results.csv
aqse_modelling/: __init__.py  legacy.py
data/: avoidome_cutoff_table.csv  avoidome_prot_list.csv  input_clean.csv  protein_family_bioactivity_bin.csv
scripts/: 01_input_preparation.py  02_protein_similarity_search_papyrus_blast.py  03_calculate_esmc_embeddings.py  04_bioactivity_threshold_optimization.py  05_AQSE_3c_2c_clf_th_op_parameter_optimization.py
tests/: test_config_and_utils.py
(+694 files in other folders)
