[project]
name = "aqse-v3"
version = "0.1.0"
description = "AQSE 3-Class Classification Workflow - Single environment for all steps"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # Base (Steps 1, 2, 4 RF) - from environment.yml
    "polars>=1.0.0",
    "pandas>=2.0.0", # Still needed for sklearn compatibility (train_test_split)
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "biopython>=1.81",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
    "papyrus-scripts>=1.0.0",
    "rdkit>=2024.9.0",
    # ESM-C (Step 3) - from esmc_environment.yml (PyPI package is 'esm' not 'esmc')
    "torch>=2.1.0",
    "esm>=3.2.0",
    # Chemprop (Step 5) - from chemprop_environment.yml
    "lightning>=2.0.0",
    "chemprop>=2.2.0",
    "torchmetrics>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aqse_modelling"]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
